cmake_minimum_required(VERSION 2.8)
project(niflib)

include_directories("include")

# set to STATIC for static library build
add_library(niflib SHARED
src/RefObject.cpp
src/kfm.cpp
src/ComplexShape.cpp
src/MatTexCollection.cpp
src/ObjectRegistry.cpp
src/nif_math.cpp
src/gen/Polygon.cpp
src/gen/RagdollDescriptor.cpp
src/gen/ByteColor3.cpp
src/gen/OblivionSubShape.cpp
src/gen/ByteMatrix.cpp
src/gen/ChannelData.cpp
src/gen/Footer.cpp
src/gen/HalfSpaceBV.cpp
src/gen/ByteColor4.cpp
src/gen/MipMap.cpp
src/gen/ByteArray.cpp
src/gen/BoxBV.cpp
src/gen/SkinData.cpp
src/gen/BSTreadTransfSubInfo.cpp
src/gen/Particle.cpp
src/gen/TBC.cpp
src/gen/SkinShape.cpp
src/gen/QuaternionXYZW.cpp
src/gen/BoundingVolume.cpp
src/gen/OldSkinData.cpp
src/gen/TexDesc.cpp
src/gen/Morph.cpp
src/gen/SkinWeight.cpp
src/gen/ExportInfo.cpp
src/gen/ControllerLink.cpp
src/gen/NodeGroup.cpp
src/gen/SphereBV.cpp
src/gen/ShaderTexDesc.cpp
src/gen/FurniturePosition.cpp
src/gen/UnknownMatrix1.cpp
src/gen/BSTreadTransfInfo.cpp
src/gen/MultiTextureElement.cpp
src/gen/hkTriangle.cpp
src/gen/LimitedHingeDescriptor.cpp
src/gen/SkinShapeGroup.cpp
src/gen/physXMaterialRef.cpp
src/gen/BodyPartList.cpp
src/gen/Header.cpp
src/gen/StringPalette.cpp
src/gen/BoundingBox.cpp
src/gen/DecalVectorArray.cpp
src/gen/OblivionColFilter.cpp
src/gen/LODRange.cpp
src/gen/register.cpp
src/gen/BSSegmentedTriangle.cpp
src/gen/AdditionalDataInfo.cpp
src/gen/UnionBV.cpp
src/gen/TexSource.cpp
src/gen/ParticleDesc.cpp
src/gen/MorphWeight.cpp
src/gen/AVObject.cpp
src/gen/SkinPartition.cpp
src/gen/HingeDescriptor.cpp
src/gen/enums.cpp
src/gen/CapsuleBV.cpp
src/gen/MatchGroup.cpp
src/gen/AdditionalDataBlock.cpp
src/gen/ArkTexture.cpp
src/pch.cpp
src/nifqhull.cpp
src/Inertia.cpp
src/Type.cpp
src/niflib.cpp
src/NIF_IO.cpp
src/obj/NiBlendInterpolator.cpp
src/obj/NiImage.cpp
src/obj/BSShaderTextureSet.cpp
src/obj/NiPSysPositionModifier.cpp
src/obj/NiPSysModifierFloatCtlr.cpp
src/obj/BSPSysMultiTargetEmitterCtlr.cpp
src/obj/NiTextKeyExtraData.cpp
src/obj/NiBSplineCompPoint3Interpolator.cpp
src/obj/NiPointLight.cpp
src/obj/NiAdditionalGeometryData.cpp
src/obj/NiPSysGrowFadeModifier.cpp
src/obj/NiPSysEmitterCtlrData.cpp
src/obj/NiBSplineCompFloatInterpolator.cpp
src/obj/NiParticles.cpp
src/obj/NiParticleGrowFade.cpp
src/obj/BSWindModifier.cpp
src/obj/Ni3dsPathController.cpp
src/obj/NiStringsExtraData.cpp
src/obj/NiPSysSphereEmitter.cpp
src/obj/NiBoolData.cpp
src/obj/bhkWorldObject.cpp
src/obj/NiParticleColorModifier.cpp
src/obj/bhkRefObject.cpp
src/obj/NiStencilProperty.cpp
src/obj/BSXFlags.cpp
src/obj/NiDynamicEffect.cpp
src/obj/NiPSysBoundUpdateModifier.cpp
src/obj/bhkSphereRepShape.cpp
src/obj/NiPSysUpdateCtlr.cpp
src/obj/BSMasterParticleSystem.cpp
src/obj/bhkPrismaticConstraint.cpp
src/obj/bhkCapsuleShape.cpp
src/obj/BSMultiBoundData.cpp
src/obj/NiTransparentProperty.cpp
src/obj/NiPhysXTransformDest.cpp
src/obj/FxWidget.cpp
src/obj/NiSourceTexture.cpp
src/obj/NiZBufferProperty.cpp
src/obj/NiRawImageData.cpp
src/obj/NiBoolTimelineInterpolator.cpp
src/obj/NiFloatsExtraData.cpp
src/obj/NiMultiTextureProperty.cpp
src/obj/BSDismemberSkinInstance.cpp
src/obj/NiIntegerExtraData.cpp
src/obj/NiBSParticleNode.cpp
src/obj/bhkConvexListShape.cpp
src/obj/NiSingleInterpController.cpp
src/obj/BSStripParticleSystem.cpp
src/obj/bhkCollisionObject.cpp
src/obj/bhkSphereShape.cpp
src/obj/NiPSysCollider.cpp
src/obj/NiRotatingParticles.cpp
src/obj/NiPSysRotationModifier.cpp
src/obj/BSDistantTreeShaderProperty.cpp
src/obj/bhkShapePhantom.cpp
src/obj/NiLightColorController.cpp
src/obj/BSBound.cpp
src/obj/NiPSysModifierBoolCtlr.cpp
src/obj/WaterShaderProperty.cpp
src/obj/NiPosData.cpp
src/obj/bhkRagdollConstraint.cpp
src/obj/NiBinaryVoxelExtraData.cpp
src/obj/NiPSysEmitterDeclinationVarCtlr.cpp
src/obj/NiAmbientLight.cpp
src/obj/BSFurnitureMarker.cpp
src/obj/NiBoolInterpController.cpp
src/obj/NiPlanarCollider.cpp
src/obj/NiMorphData.cpp
src/obj/NiFloatData.cpp
src/obj/NiBezierTriangle4.cpp
src/obj/NiPSysVolumeEmitter.cpp
src/obj/NiTextureProperty.cpp
src/obj/NiParticlesData.cpp
src/obj/NiCamera.cpp
src/obj/NiVisController.cpp
src/obj/NiPoint3Interpolator.cpp
src/obj/NiBSAnimationNode.cpp
src/obj/BSFadeNode.cpp
src/obj/NiTriShapeSkinController.cpp
src/obj/bhkNiTriStripsShape.cpp
src/obj/NiNode.cpp
src/obj/NiInterpController.cpp
src/obj/NiAutoNormalParticles.cpp
src/obj/NiFogProperty.cpp
src/obj/BSParentVelocityModifier.cpp
src/obj/NiPathInterpolator.cpp
src/obj/BSDebrisNode.cpp
src/obj/NiScreenElementsData.cpp
src/obj/NiTriStripsData.cpp
src/obj/NiSortAdjustNode.cpp
src/obj/NiBinaryExtraData.cpp
src/obj/bhkShape.cpp
src/obj/NiPSysFieldModifier.cpp
src/obj/NiPhysXMeshDesc.cpp
src/obj/bhkConvexVerticesShape.cpp
src/obj/BSMultiBoundAABB.cpp
src/obj/NiPhysXBodyDesc.cpp
src/obj/NiDefaultAVObjectPalette.cpp
src/obj/NiPSysEmitterSpeedCtlr.cpp
src/obj/NiAVObject.cpp
src/obj/BSDamageStage.cpp
src/obj/NiAVObjectPalette.cpp
src/obj/NiPSysGravityStrengthCtlr.cpp
src/obj/NiClod.cpp
src/obj/NiPhysXProp.cpp
src/obj/NiPhysXKinematicSrc.cpp
src/obj/BSPSysSimpleColorModifier.cpp
src/obj/NiPSysPlanarCollider.cpp
src/obj/Ni3dsMorphShape.cpp
src/obj/NiStringPalette.cpp
src/obj/NiControllerSequence.cpp
src/obj/NiRoom.cpp
src/obj/NiClodData.cpp
src/obj/bhkNiCollisionObject.cpp
src/obj/NiDirectionalLight.cpp
src/obj/BSFrustumFOVController.cpp
src/obj/NiPhysXShapeDesc.cpp
src/obj/NiTriStrips.cpp
src/obj/FxRadioButton.cpp
src/obj/BSRefractionStrengthController.cpp
src/obj/bhkSPCollisionObject.cpp
src/obj/bhkBlendController.cpp
src/obj/NiPSysData.cpp
src/obj/NiRoomGroup.cpp
src/obj/NiPSysResetOnLoopCtlr.cpp
src/obj/DistantLODShaderProperty.cpp
src/obj/bhkOrientHingedBodyAction.cpp
src/obj/NiGeometryData.cpp
src/obj/HairShaderProperty.cpp
src/obj/NiKeyframeData.cpp
src/obj/BSShaderLightingProperty.cpp
src/obj/NiMaterialColorController.cpp
src/obj/NiPSysGravityFieldModifier.cpp
src/obj/NiPSysSphericalCollider.cpp
src/obj/RootCollisionNode.cpp
src/obj/NiSpotLight.cpp
src/obj/bhkRigidBodyT.cpp
src/obj/NiPSysColorModifier.cpp
src/obj/BSPSysArrayEmitter.cpp
src/obj/BSRefractionFirePeriodController.cpp
src/obj/NiLODData.cpp
src/obj/NiSphericalCollider.cpp
src/obj/NiSwitchNode.cpp
src/obj/NiBezierMesh.cpp
src/obj/NiBone.cpp
src/obj/Ni3dsColorAnimator.cpp
src/obj/TileShaderProperty.cpp
src/obj/NiPoint3InterpController.cpp
src/obj/BSMultiBoundNode.cpp
src/obj/NiKeyBasedInterpolator.cpp
src/obj/bhkLiquidAction.cpp
src/obj/BSMultiBound.cpp
src/obj/NiMeshPSysData.cpp
src/obj/bhkBoxShape.cpp
src/obj/NiPSysAgeDeathModifier.cpp
src/obj/NiSkinData.cpp
src/obj/NiMaterialProperty.cpp
src/obj/BSPSysStripUpdateModifier.cpp
src/obj/NiPSysBombModifier.cpp
src/obj/NiLODNode.cpp
src/obj/NiBlendBoolInterpolator.cpp
src/obj/NiTexture.cpp
src/obj/Ni3dsAnimationNode.cpp
src/obj/BSValueNode.cpp
src/obj/NiAlphaProperty.cpp
src/obj/NiPSysTrailEmitter.cpp
src/obj/NiColorExtraData.cpp
src/obj/NiMultiTargetTransformController.cpp
src/obj/NiSkinInstance.cpp
src/obj/NiGeometry.cpp
src/obj/BSShaderNoLightingProperty.cpp
src/obj/NiPSysModifierCtlr.cpp
src/obj/NiClodSkinInstance.cpp
src/obj/NiTransformController.cpp
src/obj/NiGravity.cpp
src/obj/NiSpecularProperty.cpp
src/obj/AvoidNode.cpp
src/obj/bhkListShape.cpp
src/obj/bhkPackedNiTriStripsShape.cpp
src/obj/NiControllerManager.cpp
src/obj/SkyShaderProperty.cpp
src/obj/NiPSysMeshUpdateModifier.cpp
src/obj/BSBlastNode.cpp
src/obj/NiPhysXPropDesc.cpp
src/obj/NiExtraDataController.cpp
src/obj/NiSourceCubeMap.cpp
src/obj/NiPSysEmitterLifeSpanCtlr.cpp
src/obj/NiGeomMorpherController.cpp
src/obj/NiBlendPoint3Interpolator.cpp
src/obj/NiSkinPartition.cpp
src/obj/NiPSysEmitterDeclinationCtlr.cpp
src/obj/NiSequenceStreamHelper.cpp
src/obj/NiPSysEmitter.cpp
src/obj/NiPalette.cpp
src/obj/NiCollisionObject.cpp
src/obj/NiBSplineData.cpp
src/obj/NiPSysBoxEmitter.cpp
src/obj/NiBSplineCompTransformInterpolator.cpp
src/obj/NiPhysXD6JointDesc.cpp
src/obj/NiParticleRotation.cpp
src/obj/NiBoneLODController.cpp
src/obj/NiPersistentSrcTextureRendererData.cpp
src/obj/bhkSimpleShapePhantom.cpp
src/obj/NiEnvMappedTriShapeData.cpp
src/obj/bhkPCollisionObject.cpp
src/obj/Lighting30ShaderProperty.cpp
src/obj/NiArkAnimationExtraData.cpp
src/obj/bhkShapeCollection.cpp
src/obj/bhkBreakableConstraint.cpp
src/obj/BSShaderProperty.cpp
src/obj/NiEnvMappedTriShape.cpp
src/obj/NiScreenLODData.cpp
src/obj/bhkRigidBody.cpp
src/obj/NiAlphaController.cpp
src/obj/NiKeyframeController.cpp
src/obj/bhkTransformShape.cpp
src/obj/NiBSplineInterpolator.cpp
src/obj/NiBoolInterpolator.cpp
src/obj/NiPortal.cpp
src/obj/NiLookAtController.cpp
src/obj/NiFloatInterpolator.cpp
src/obj/NiTransformData.cpp
src/obj/NiPathController.cpp
src/obj/NiPSysSpawnModifier.cpp
src/obj/NiInterpolator.cpp
src/obj/NiVertWeightsExtraData.cpp
src/obj/NiPSysVortexFieldModifier.cpp
src/obj/NiRangeLODData.cpp
src/obj/bhkBvTreeShape.cpp
src/obj/NiLightIntensityController.cpp
src/obj/NiPSysTurbulenceFieldModifier.cpp
src/obj/NiObjectNET.cpp
src/obj/bhkPhantom.cpp
src/obj/NiSequence.cpp
src/obj/hkPackedNiTriStripsData.cpp
src/obj/NiAutoNormalParticlesData.cpp
src/obj/NiFlipController.cpp
src/obj/bhkConstraint.cpp
src/obj/NiFloatInterpController.cpp
src/obj/NiTriBasedGeom.cpp
src/obj/NiBSPArrayController.cpp
src/obj/NiObject.cpp
src/obj/NiBooleanExtraData.cpp
src/obj/NiTextureModeProperty.cpp
src/obj/NiRotatingParticlesData.cpp
src/obj/NiArkImporterExtraData.cpp
src/obj/NiParticleMeshes.cpp
src/obj/NiParticleMeshModifier.cpp
src/obj/NiLinesData.cpp
src/obj/NiPSysCylinderEmitter.cpp
src/obj/NiLight.cpp
src/obj/bhkHingeConstraint.cpp
src/obj/NiTriShape.cpp
src/obj/NiParticleBomb.cpp
src/obj/NiParticleSystemController.cpp
src/obj/NiPhysXActorDesc.cpp
src/obj/NiPSysModifier.cpp
src/obj/NiExtraData.cpp
src/obj/FxButton.cpp
src/obj/NiProperty.cpp
src/obj/NiPSysMeshEmitter.cpp
src/obj/VolumetricFogShaderProperty.cpp
src/obj/BSStripPSysData.cpp
src/obj/NiTextureTransformController.cpp
src/obj/NiMorpherController.cpp
src/obj/NiTimeController.cpp
src/obj/NiBSplinePoint3Interpolator.cpp
src/obj/NiFloatExtraData.cpp
src/obj/NiFloatExtraDataController.cpp
src/obj/NiPSysEmitterCtlr.cpp
src/obj/NiTexturingProperty.cpp
src/obj/NiMorphController.cpp
src/obj/NiPSysAirFieldModifier.cpp
src/obj/NiPSysGravityModifier.cpp
src/obj/bhkConvexTransformShape.cpp
src/obj/NiCollisionData.cpp
src/obj/bhkConvexShape.cpp
src/obj/NiTextureEffect.cpp
src/obj/Ni3dsAlphaAnimator.cpp
src/obj/bhkMalleableConstraint.cpp
src/obj/NiColorData.cpp
src/obj/NiTriBasedGeomData.cpp
src/obj/bhkEntity.cpp
src/obj/NiBlendFloatInterpolator.cpp
src/obj/NiParticleModifier.cpp
src/obj/NiWireframeProperty.cpp
src/obj/NiBSBoneLODController.cpp
src/obj/NiVectorExtraData.cpp
src/obj/NiBSplineTransformInterpolator.cpp
src/obj/NiPhysXMaterialDesc.cpp
src/obj/bhkMultiSphereShape.cpp
src/obj/NiLookAtInterpolator.cpp
src/obj/NiLines.cpp
src/obj/Ni3dsParticleSystem.cpp
src/obj/bhkLimitedHingeConstraint.cpp
src/obj/BSSegmentedTriShape.cpp
src/obj/BSMaterialEmittanceMultController.cpp
src/obj/BSWArray.cpp
src/obj/NiArkTextureExtraData.cpp
src/obj/BSTreadTransfInterpolator.cpp
src/obj/NiBinaryVoxelData.cpp
src/obj/bhkMoppBvTreeShape.cpp
src/obj/NiPSysDragFieldModifier.cpp
src/obj/NiBlendTransformInterpolator.cpp
src/obj/bhkBlendCollisionObject.cpp
src/obj/NiBSplineBasisData.cpp
src/obj/BSKeyframeController.cpp
src/obj/NiRollController.cpp
src/obj/NiScreenElements.cpp
src/obj/NiPSysDragModifier.cpp
src/obj/TallGrassShaderProperty.cpp
src/obj/NiArkShaderExtraData.cpp
src/obj/NiVisData.cpp
src/obj/NiPSysColliderManager.cpp
src/obj/BSDecalPlacementVectorExtraData.cpp
src/obj/bhkStiffSpringConstraint.cpp
src/obj/NiTriShapeData.cpp
src/obj/NiUVData.cpp
src/obj/BSMultiBoundSphere.cpp
src/obj/ATextureRenderData.cpp
src/obj/NiParticleSystem.cpp
src/obj/bhkAabbPhantom.cpp
src/obj/bhkSerializable.cpp
src/obj/NiVertexColorProperty.cpp
src/obj/NiArkViewportInfoExtraData.cpp
src/obj/NiPSysModifierActiveCtlr.cpp
src/obj/NiIntegersExtraData.cpp
src/obj/NiPSysEmitterInitialRadiusCtlr.cpp
src/obj/NiPixelData.cpp
src/obj/NiParticleMeshesData.cpp
src/obj/NiLightDimmerController.cpp
src/obj/BSShaderPPLightingProperty.cpp
src/obj/NiShadeProperty.cpp
src/obj/NiMeshParticleSystem.cpp
src/obj/BSAnimNotes.cpp
src/obj/BSOrderedNode.cpp
src/obj/NiBSplineFloatInterpolator.cpp
src/obj/NiTransformInterpolator.cpp
src/obj/NiBillboardNode.cpp
src/obj/NiDitherProperty.cpp
src/obj/NiUVController.cpp
src/obj/NiStringExtraData.cpp
src/obj/NiPSysFieldMagnitudeCtlr.cpp
NvTriStrip/VertexCache.cpp
NvTriStrip/NvTriStripObjects.cpp
NvTriStrip/NvTriStrip.cpp
TriStripper/tri_stripper.cpp
TriStripper/connectivity_graph.cpp
TriStripper/policy.cpp
)

set_target_properties(niflib
PROPERTIES DEFINE_SYMBOL BUILDING_NIFLIB_DLL)
